#2444 Adjusted documentation and minor refactoring.