@@ -7,12 +7,8 @@ import ua.com.fielden.platform.security.tokens.user.User_CanRead_Token;
 import ua.com.fielden.platform.security.tokens.user.User_CanSave_Token;
 import ua.com.fielden.platform.test_config.AbstractDaoTestCase;
 
-import java.util.ArrayList;
 import java.util.List;
-import java.util.stream.Collectors;
-import java.util.stream.Stream;
 
-import static java.util.stream.Collectors.toList;
 import static org.assertj.core.api.Assertions.assertThat;
 import static ua.com.fielden.platform.entity.query.fluent.EntityQueryUtils.*;
 import static ua.com.fielden.platform.utils.CollectionUtil.concatList;
@@ -20,19 +16,19 @@ import static ua.com.fielden.platform.utils.CollectionUtil.concatList;
 public class SecurityRoleAssociationTest extends AbstractDaoTestCase {
 
     @Test
-    public void addAssociations_creates_records_for_all_specified_assocations() {
+    public void addAssociations_creates_records_for_all_specified_associations() {
         final var userRole = save(new_(UserRole.class, "TEST_ROLE_01", "Test role 01").setActive(true));
         final SecurityRoleAssociationCo coSecurityRoleAssociation = co(SecurityRoleAssociation.class);
 
         final var tokens1 = List.of(User_CanSave_Token.class, User_CanRead_Token.class);
-        coSecurityRoleAssociation.addAssociations(tokens1.stream().map(tok -> new_(SecurityRoleAssociation.class).setRole(userRole).setSecurityToken(tok)).collect(toList()));
+        coSecurityRoleAssociation.addAssociations(tokens1.stream().map(tok -> new_(SecurityRoleAssociation.class).setRole(userRole).setSecurityToken(tok)).toList());
         assertThat(tokensForRole(userRole)).containsExactlyInAnyOrderElementsOf(tokens1);
 
         final var tokens2 = List.of(Attachment_CanRead_Token.class);
-        coSecurityRoleAssociation.addAssociations(tokens2.stream().map(tok -> new_(SecurityRoleAssociation.class).setRole(userRole).setSecurityToken(tok)).collect(toList()));
+        coSecurityRoleAssociation.addAssociations(tokens2.stream().map(tok -> new_(SecurityRoleAssociation.class).setRole(userRole).setSecurityToken(tok)).toList());
         assertThat(tokensForRole(userRole)).containsExactlyInAnyOrderElementsOf(concatList(tokens1, tokens2));
 
-        coSecurityRoleAssociation.addAssociations(new ArrayList<>());
+        coSecurityRoleAssociation.addAssociations(List.of());
 
         assertThat(tokensForRole(userRole)).containsExactlyInAnyOrderElementsOf(concatList(tokens1, tokens2));
     }
