@@ -13,8 +13,6 @@ import ua.com.fielden.platform.utils.IUniversalConstants;
 
 import java.util.List;
 
-import static java.util.stream.Collectors.toList;
-
 /// Should be used as a convenient base class for domain driven test cases.
 ///
 @RunWith(H2OrPostgreSqlOrSqlServerContextSelector.class)
@@ -63,7 +61,7 @@ public abstract class AbstractDaoTestCase extends AbstractDomainDrivenTestCase {
             final SecurityRoleAssociationCo coSecurityRoleAssociation = co(SecurityRoleAssociation.class);
             coSecurityRoleAssociation.addAssociations(provider.allSecurityTokens()
                                                               .stream()
-                                                              .map(tok -> coSecurityRoleAssociation.new_().setRole(admin).setSecurityToken(tok)).collect(toList()));
+                                                              .map(tok -> coSecurityRoleAssociation.new_().setRole(admin).setSecurityToken(tok)).toList());
         }
 
         up.setUsername(testUser.getKey(), getInstance(IUser.class));
